force-app/main/default/objects/Expense_Distribution__c/Expense_Distribution__c.object-meta.xml
<CustomObject>
    <label>Expense Distribution</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>