force-app/main/default/objects/Expense_Distribution__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee related with the Expense Distribution</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Expense Distributions</relationshipLabel>
    <relationshipName>Expense_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>