force-app/main/default/objects/Expense_Distribution__c/fields/is_Full_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>is_Full_Amount_Paid__c</fullName>
    <formula>Amount__c   &lt;= Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Full Amount Paid</label>
    <type>Checkbox</type>
</CustomField>