force-app/main/default/objects/Expense_Distribution__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>Total paid amount of the Expense Distribution</description>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>